Implement AdaptiveCard submissions from user transcript

--- a/PVATestFramework/PVATestFramework.Tests/PVATestFramework.Tests.csproj
+++ b/PVATestFramework/PVATestFramework.Tests/PVATestFramework.Tests.csproj
@@ -64,6 +64,12 @@
     <None Update="Files\Fail\multiple.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Files\Hel\test-submitContactForm - Copy.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\Hel\test-submitContactForm.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Files\Pass\adaptive_card.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
